--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -41,3 +41,9 @@
 //$pre-bg: $base03;
 //$pre-border: darken($base02, 5);
 //$pre-color: $base1;
+
+
+//begin JAB
+
+$page-bg: #ffffff;
+$header-bg: #002b36;
