--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -8,3 +8,12 @@
 //$heading-font-family: "Verdana", sans-serif;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
+
+
+//begin JAB
+
+$sans: "Open Sans", sans-serif;
+$serif: "Open Sans", sans-serif;
+$heading-font-family: "Open Sans", sans-serif;
+$header-title-font-family: "Open Sans", sans-serif;
+$header-subtitle-font-family: "Open Sans", sans-serif;
